Periodically update progress bar

Summary: To avoid progress bar event flooding, adds a long-term timer to send the events periodically
BUG: 369374
FIXED-IN: 5.0.3

Reviewers: #kdevelop, kfunk

Subscribers: brauch, kfunk, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D3110